--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -33,9 +33,23 @@
     <![endif]-->
     <script src="/static/jsi18n/{{ LANGUAGE_CODE }}/djangojs.js"></script>
 
+    <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-N5M2X7X');</script>
+    <!-- End Google Tag Manager -->
+
 </head>
 
 <body id="page-top" class="cadastro-usuario sistema">
+
+    <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5M2X7X"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
  <header class="bs-docs-nav navbar navbar-static-top header-sistema header-user" id="top">
             <div class="navbar-header">
                 <button aria-controls="bs-navbar" aria-expanded="false" class="collapsed navbar-toggle" data-target="#bs-navbar" data-toggle="collapse" type="button">
