--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -50,7 +50,7 @@
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
- <header class="bs-docs-nav navbar navbar-static-top header-sistema header-user" id="top">
+ <header class="bs-docs-nav navbar navbar-static-top header-sistema header-user" id="top2">
             <div class="navbar-header">
                 <button aria-controls="bs-navbar" aria-expanded="false" class="collapsed navbar-toggle" data-target="#bs-navbar" data-toggle="collapse" type="button">
                     <span class="sr-only">Toggle navigation</span>
