--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -34,7 +34,7 @@
                             <p class="p42 bold">{% trans "Ou para seu Ecommerce" %}</p>
                             <a href="{% url 'user_edit' %}" class="btn btn-default btn-quadrado"><i class="fas fa-user-tag"></i>{% trans "ASSINAR AGORA" %}</a>
                         </div>
-                        <div class="col-m col-right">
+                        <div class="col-m col-right col-mobile">
                             <img src="/static/img/box-cardboard.png" style="width: 31%; margin: 66px 0 0 0;" />
                             <img src="/static/img/ebay.png" style="width: 46%; margin: 0px 0 0 141px;" />
                             <img src="/static/img/amz.png" style="width: 54%; margin: 0px 0 0 222px;" />
@@ -47,7 +47,7 @@
                             <p class="p42">{% trans "Às 21:30" %}</p>
                             <a href="{% url 'user_edit' %}" class="btn btn-default btn-quadrado"><i class="fas fa-user-tag"></i>{% trans "ASSINAR AGORA" %}</a>
                         </div>
-                        <div class="col-m col-right">
+                        <div class="col-m col-right col-mobile">
                             <img src="/static/img/boxes.jpg" class="img-margin" />
                         </div>
                     </div>
@@ -58,13 +58,13 @@
                             <p class="p20">{% trans "Nos Produtos Ofertados" %}</p>
                             <p class="p12">* {% trans "O nosso calculo de retorno é baseado sempre nos valores e fees apurados junto a Amazon" %}.</p>
                         </div>
-                        <div class="col-m col-right">
+                        <div class="col-m col-right col-mobile">
                             <img src="/static/img/money.png" width="30%" />
                             <img src="/static/img/money.png" width="30%" />
                         </div>
                     </div>
                     <div class="item">
-                        <div class="col-m col-right">
+                        <div class="col-m col-right col-mobile">
                             <img src="/static/img/boxes-2.png" class="margin-40" width="30%" />
                             <img src="/static/img/boxes-2.png" class="margin-40" width="35%" />
                         </div>
