--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -2917,6 +2917,10 @@ p.p25{
     background-color: transparent;
 }
 
+.menu-top-mobile{
+        display: none;
+    }
+
 @media (min-width: 1350px){
     .container {
         width: 1350px;
@@ -2934,6 +2938,10 @@ p.p25{
 }
 
 @media (max-width: 767px){
+
+    .menu-top-mobile{
+        display: block;
+    }
 
     #top {
         display: none;
@@ -3049,7 +3057,7 @@ p.p25{
 
     .box-container-lote {
         width: 100%;
-        height: 307px;
+        height: 426px;
         margin-bottom: 0;
     }
 
@@ -3073,7 +3081,7 @@ p.p25{
     }
 
     .box-lote span {
-        margin: -9px 0 9px 1px;
+        margin: 10px 0 9px 1px;
     }
 
     .lucro-prod {
@@ -3196,8 +3204,9 @@ p.p25{
     }
 
     .box-lote img {
-        width: 100%;
-        height: 100%;
+        width: 100px;
+        height: 100px;
+        margin-top: 27px;
     }
 
     .box-container-lote .foto{
@@ -3213,7 +3222,8 @@ p.p25{
 
     .descricao-lote-prod{
         float: left;
-        width: 47%;
+        width: 93%;
+        margin: 15px;
     }
 
     .box-lote img.img-vip {
