Retirar we create

--- a/html/templates/user_edit.html
+++ b/html/templates/user_edit.html
@@ -106,7 +106,7 @@
                     {% endif %}
                 </div>
             </div>
-                <br>
+                <br><!--
                 <div class="box-comparativo-valor">
                 <div class="box-valor">
                     <p class="seja center">We Create your Amazon Shipment</p>
@@ -122,7 +122,7 @@
                     </div>
                     {% endif %}
                 </div>
-            </div>
+            </div>-->
 
 
             </div>
