--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -541,7 +541,8 @@
                 </div>
             </div>
                 <br>
-                <div class="box-comparativo-valor">
+
+             <!--   <div class="box-comparativo-valor">
                 <div class="box-valor">
                     <p class="seja center">We Create your Amazon Shipment</p>
                     <p class="assinate-span"><span>U$ 24,90</span>/{% trans "mês" %}</p><br>
@@ -556,7 +557,7 @@
                         <br><small><strong>* {% trans "Complete your registration before signing a plan" %}</strong></small>
                     </div>
                 </div>
-            </div>
+            </div>-->
 
             </difv>
             <div class="col-md-1">
