--- a/html/templates/user_edit.html
+++ b/html/templates/user_edit.html
@@ -43,6 +43,7 @@
                     <label id="email-error" class="error" for="{{ form.email.id_for_label }}">{{ error|escape }}</label>
                   {% endfor %}
                 </div><br>
+{% comment %}
                   <div class="form-group col-md-12">
                     <label for="{{ form.amz_store_name.id_for_label }}">{% trans "Nome da sua loja na Amazon" %}</label>
                       {% trans "Digite o nome da loja na Amazon" as amzstore %}
@@ -51,6 +52,7 @@
                       <label id="amzstore-error" class="error" for="{{ form.amz_store_name.id_for_label }}">{{ error|escape }}</label>
                     {% endfor %}
                   </div><br>
+{% endcomment %}
                 <div class="form-group col-md-12">
                   <label for="{{ form.cell_phone.id_for_label }}">{{ form.cell_phone.label }}*</label>
                     {% trans "Digite o telefone, celular de preferência" as cell_phone %}
