--- a/html/templates/detalhe_envio_brasil.html
+++ b/html/templates/detalhe_envio_brasil.html
@@ -316,7 +316,7 @@
                 <div class="box-resposta">
                     <p class="text-danger"><i class="fa fa-times-circle fa-3x"></i></p>
                     <p class="titulo text-danger">Falha. <br> Sua Assinatura NÃO foi ativada</p>
-                    <p class="text-info">Entre em contato com o suporte pelo email support@voiservices.com</p>
+                    <p class="text-info">Entre em contato com o suporte pelo email cs@myamzpartner.com</p>
                     <p><a href="#"><i class="fa fa-link"></i> Voltar para tela de cadastro</a> </p><br>
                 </div>
             </div>
