--- a/html/templates/faq.html
+++ b/html/templates/faq.html
@@ -18,7 +18,7 @@
                         <div id="login" class="tab-pane active">
                             <ul class="listaancora">
                                 <li><a href="#l1">1. Quais meios de pagamento são aceitos?</a></li>
-                                <li><a href="#l2">2. O VOI Services oferece serviço de redirecionamento?</a></li>
+                                <li><a href="#l2">2. O My Amazon Partner oferece serviço de redirecionamento?</a></li>
                             </ul>
                             <div class="respostasfaq">
                                 <div id="l1">
@@ -26,7 +26,7 @@
                                     <p>Estamos trabalhando em outros meios de pagamento. Por enquanto aceitamos apenas Paypal.</p>
                                 </div>
                                 <div id="l2">
-                                    <p><strong>2. O VOI Services oferece serviço de redirecionamento?</strong></p>
+                                    <p><strong>2. O My Amazon Partner oferece serviço de redirecionamento?</strong></p>
                                     <p>Não. Apenas enviamos os produtos comprados na nossa plataforma.</p>
                                 </div>
                             </div>
