--- a/html/templates/how_it_works.html
+++ b/html/templates/how_it_works.html
@@ -18,7 +18,7 @@
            <div class="col-md-4">
             <div class="box-comparativo-valor">
                 <div class="box-valor">
-                    <p class="seja center">VOI Services</p>
+                    <p class="seja center">My Amazon Partner</p>
                     <p class="assinate-span"><span>U$ 74,90</span>/mês</p>
                     <small>*Sem adesão. Cancele a qualquer momento.</small>
                     <ul>
@@ -92,7 +92,7 @@
                   </th>
                   <th class="center">
 
-                      VOI Services
+                      My Amazon Partner
                   </th>
                 </tr>
               </thead>
@@ -135,7 +135,7 @@
                 </tr>
               </tbody>
             </table><!--
-            <p>Torne-se um assinante VOI Services e desfrute das inúmeras vantagens que o nosso serviço oferece.</p>
+            <p>Torne-se um assinante My Amazon Partner e desfrute das inúmeras vantagens que o nosso serviço oferece.</p>
             <a class="btn btn-primary" href="{% url 'user_registration' %}"><i class="fa fa-fw fa-user-plus"></i> Seja Assinante</a>--><br><br>
           </div>
         </div>
