--- a/html/templates/invoice.html
+++ b/html/templates/invoice.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% trans "VOI Services" %} - {{ title }}</title>
+    <title>{% trans "My Amazon Partner" %} - {{ title }}</title>
 
     <!-- Bootstrap -->
     <link href="/static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -62,7 +62,7 @@
         <ul class="order-details dados">
             <li>https://lots.voiservices.com</li>
             <li>(978) 992-8417</li>
-            <li> support@voiservices.com</li>
+            <li> cs@myamzpartner.com</li>
             <li> 1 Lafayette Rd - Building 1, <br>Door E (Loading Dock)<br>Hampton, New Hampshire, 03842</li>
         </ul>
         <ul class="order-details pay">
@@ -210,8 +210,8 @@
             </table>
         </div>
     </div>
-    <P class="center">Thank you for shopping at VOI Services.</P>
-    <p class="center">Do you need further assistance with your order? Email us at support@voiservices.com and include order number in your message.</p>
+    <P class="center">Thank you for shopping at My Amazon Partner.</P>
+    <p class="center">Do you need further assistance with your order? Email us at cs@myamzpartner.com and include order number in your message.</p>
 </div>
 
 <a href="javascript:window.print();" class="btn btn-primary imprimir"><i class="fas fa-print"></i> Imprimir Invoice</a>
