--- a/html/templates/partner.html
+++ b/html/templates/partner.html
@@ -10,7 +10,7 @@
 
         </div>
         <div class="col-md-10 main">
-          <h1 class="page-header"><i class="fa fa-street-view"></i> {% trans "Seja um colaborador VOI Lots" %}</h1>
+          <h1 class="page-header"><i class="fa fa-street-view"></i> {% trans "Seja um colaborador My Lots" %}</h1>
           <div class="row">
             <div class="col-md-1">
             </div>
@@ -20,7 +20,7 @@
             </div>
             <div class="col-md-6">
                 <div>
-                    <p class="seja partner">{% trans "Se você mora nos Estados unidos, sabe como funciona retail arbitrage, compra em leilões ou whole sale, e também realiza prep & ship para a Amazon, esta pode ser uma ótima oportunidade de parceria. Torne-se um colaborador VOI Services e coloque seus produtos para vender em nossa plataforma. Nós estamos sempre buscando a melhor forma de oferecer os melhores produtos para nossos clientes e você poderá obter um maior giro de venda em seus produtos, ou seja, todo mundo ganha!" %}</p><p class="seja partner">{% trans "Preencha o formulário abaixo e saiba mais detalhes de como funciona." %}</p>
+                    <p class="seja partner">{% trans "Se você mora nos Estados unidos, sabe como funciona retail arbitrage, compra em leilões ou whole sale, e também realiza prep & ship para a Amazon, esta pode ser uma ótima oportunidade de parceria. Torne-se um colaborador My Amazon Partner e coloque seus produtos para vender em nossa plataforma. Nós estamos sempre buscando a melhor forma de oferecer os melhores produtos para nossos clientes e você poderá obter um maior giro de venda em seus produtos, ou seja, todo mundo ganha!" %}</p><p class="seja partner">{% trans "Preencha o formulário abaixo e saiba mais detalhes de como funciona." %}</p>
                 </div>
                 <hr>
                 <form action="" method="post" class="form-cad-cliente" id="form-add-colab" novalidate="novalidate">
