--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -15,7 +15,7 @@
 
     <div class="container-fluid">
       <div class="row">
-          <p class="cab-index">{% blocktrans %}<strong>Free prep and ship</strong> para produtos adquiridos conosco{% endblocktrans %} <i class="fas fa-shipping-fast"></i> <a href="https://voiservices.com/en/terms/" target="_blank" class="btn btn-default btn-quadrado">{% trans "Veja Nossos Termos" %} > </a></p>
+          <p class="cab-index">{% blocktrans %}<strong>Free prep and ship</strong> para produtos adquiridos conosco{% endblocktrans %} <i class="fas fa-shipping-fast"></i> <a href="https://myamzpartner.com/en/terms/" target="_blank" class="btn btn-default btn-quadrado">{% trans "Veja Nossos Termos" %} > </a></p>
               <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Carousel indicators-->
                 <ol class="carousel-indicators">
@@ -72,7 +72,7 @@
                             <p class="p55 bold">{% trans "Após a Compra" %}</p>
                             <p class="p42">{% trans "Seus Produtos já estarão disponíveis para envio" %}</p>
                             <a href="{% url 'user_edit' %}" class="btn btn-default btn-quadrado"><i class="fas fa-user-tag"></i> {% trans "ASSINAR AGORA" %}</a>
-                            <a href="https://voiservices.com/en/lots/how-it-works/"  target="_blank" class="btn btn-default btn-quadrado" style=""><i class="fas fa-user-tag"></i> {% trans "VEJA COMO FUNCIONA" %}</a>
+                            <a href="https://myamzpartner.com/en/lots/how-it-works/"  target="_blank" class="btn btn-default btn-quadrado" style=""><i class="fas fa-user-tag"></i> {% trans "VEJA COMO FUNCIONA" %}</a>
                         </div>
                     </div>
                 </div>
