--- a/html/templates/subscriber_return.html
+++ b/html/templates/subscriber_return.html
@@ -85,7 +85,7 @@
                 <div class="box-resposta">
                     <p class="text-danger"><i class="fa fa-times-circle fa-3x"></i></p>
                     <p class="titulo text-danger">{% trans "Sua Assinatura NÃO foi ativada" %}</p>
-                    <p class="text-info">{% trans "Em caso de dúvidas, entre em contato com o suporte pelo email" %} support@voiservices.com</p>
+                    <p class="text-info">{% trans "Em caso de dúvidas, entre em contato com o suporte pelo email" %} cs@myamzpartner.com</p>
                     <p><a href="{% url 'user_edit' %}"><i class="fa fa-link"></i> {% trans "Voltar à tela do seu cadastro" %}</a> </p><br>
                 </div>
             </div>
@@ -105,7 +105,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">{% trans "Copyright &copy; VOI Services 2019" %}</span>
+                    <span class="copyright">{% trans "Copyright &copy; My Amazon Partner 2019" %}</span>
                 </div>
                 <div class="col-md-3"><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
@@ -115,7 +115,7 @@
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href=https://voiservices.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
+                            <a href=https://myamzpartner.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
                         </li>
                     </ul>
                 </div>
