--- a/html/templates/user_edit.html
+++ b/html/templates/user_edit.html
@@ -97,7 +97,7 @@
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Envio para Amazon em até 3 dias úteis após a compra" %}</span></li>
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Redirecionamento Grátis" %}</span></li>
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Descontos nos serviços de redirecionamento" %}</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='https://voiservices.com/en/voi-prime/' class='download'>{% trans "Saiba Mais" %}</a></span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='https://myamzpartner.com/en/voi-prime/' class='download'>{% trans "Saiba Mais" %}</a></span></li>
                     </ul>
                     {% if is_voiprime is False %}
                     <div class="contem-btn-ass">
@@ -114,7 +114,7 @@
                     <small>*{% trans "Sem adesão. Cancele a qualquer momento" %}.</small>
                     <ul>
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Criamos seu envio para Amazon para você" %}</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='https://voiservices.com/en/create-az-shipment/' class='download'>{% trans "Saiba Mais" %}</a></span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='https://myamzpartner.com/en/create-az-shipment/' class='download'>{% trans "Saiba Mais" %}</a></span></li>
                     </ul>
                     {% if is_wcyazs is False %}
                     <div class="contem-btn-ass">
@@ -205,7 +205,7 @@
                 <div class="modal-body">
                     <p class="fba-text"><strong>Unsubscribe VOI Prime:</strong></p>
                     <p class="fba-text">1) Click on the link: <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_manage-paylist' class=download' target='_blank'>https://www.paypal.com/cgi-bin/webscr?cmd=_manage-paylist</a></p>
-                    <p class="fba-text">2) Chose vendor 'VOI Services LLC', description 'VOI Prime."</p>
+                    <p class="fba-text">2) Chose vendor 'My Amazon Partner LLC', description 'VOI Prime."</p>
                     <p class="fba-text">3) Click on "Cancel"</p>
                     <p class="fba-text">4) Confirm the "Cancel Plan"</p>
                 </div>
@@ -228,7 +228,7 @@
                 <div class="modal-body">
                     <p class="fba-text"><strong>Unsubscribe WE CREATE YOUR AMAZON SHIPMENT:</strong></p>
                     <p class="fba-text">1) Click on the link: <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_manage-paylist' class=download' target='_blank'>https://www.paypal.com/cgi-bin/webscr?cmd=_manage-paylist</a></p>
-                    <p class="fba-text">2) Chose vendor "VOI Services LLC", description "WE CREATE YOUR AMAZON SHIPMENT""</p>
+                    <p class="fba-text">2) Chose vendor "My Amazon Partner LLC", description "WE CREATE YOUR AMAZON SHIPMENT""</p>
                     <p class="fba-text">3) Click on "Cancel"</p>
                     <p class="fba-text">4) Confirm the "Cancel Plan"</p>
                 </div>
