--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -58,7 +58,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand page-scroll">
+                <a href="/" class="navbar-brand page-scroll logo-services-img">
                     <span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span>
                 </a>
             </div>
@@ -506,7 +506,7 @@
                     </div>
                     <div class="col-md-5">
                         <hr /><br>
-                        <p>{% trans "<a href='https://voiservices.com/en/terms/' target='_blank' class='download'>Click here</a> and read our terms of service" %}</p>
+                        <p>{% trans "<a href='https://myamzpartner.com/en/terms/' target='_blank' class='download'>Click here</a> and read our terms of service" %}</p>
                     <br><hr>
                     </div>
                     <div class="col-md-12">
@@ -515,7 +515,7 @@
                     <br><br><br>
                 </form>
 
-            </div>
+            </div><!--
             <difv class="col-md-4 box-cad-esquerda">
                 <div class="box-valor">
                     <h3 class="page-header"> {% trans "Nossos planos disponíveis" %}:</h3>
@@ -531,7 +531,7 @@
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Envio para Amazon em até 3 dias úteis após a compra" %}</span></li>
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Redirecionamento Grátis" %}</span></li>
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Descontos nos serviços de redirecionamento" %}</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='https://voiservices.com/en/voi-prime/' target="_blank" class='download'>{% trans "Saiba Mais" %}</a></span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='https://myamzpartner.com/en/voi-prime/' target="_blank" class='download'>{% trans "Saiba Mais" %}</a></span></li>
                     </ul>
 
                     <div class="contem-btn-ass">
@@ -542,14 +542,14 @@
             </div>
                 <br>
 
-             <!--   <div class="box-comparativo-valor">
+               <div class="box-comparativo-valor">
                 <div class="box-valor">
                     <p class="seja center">We Create your Amazon Shipment</p>
                     <p class="assinate-span"><span>U$ 24,90</span>/{% trans "mês" %}</p><br>
                     <small>*{% trans "Sem adesão. Cancele a qualquer momento" %}.</small>
                     <ul>
                         <li><i class="fa fa-fw fa-check-circle-o"></i> <span>{% trans "Criamos seu envio para Amazon para você" %}</span></li>
-                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='https://voiservices.com/en/create-az-shipment/' target="_blank" class='download'>{% trans "Saiba Mais" %}</a></span></li>
+                        <li><i class="fa fa-fw fa-check-circle-o"></i> <span><a href='https://myamzpartner.com/en/create-az-shipment/' target="_blank" class='download'>{% trans "Saiba Mais" %}</a></span></li>
                     </ul>
 
                     <div class="contem-btn-ass">
@@ -571,7 +571,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <span class="copyright">{% trans "Copyright &copy; VOI Lots 2018" %}</span>
+                    <span class="copyright">{% trans "Copyright &copy; My Amz Partner 2020" %}</span>
                 </div>
                 <div class="col-md-3"><!--
                    <a href="https://prepshiptool.com" target="_blank" class="by download">
@@ -581,7 +581,7 @@
                 <div class="col-md-6">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href='https://voiservices.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
+                            <a href='https://myamzpartner.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
                         </li>
                     </ul>
                 </div>
