--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -56,7 +56,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> {% trans "Menu" %} <i class="fa fa-bars"></i>
                 </button>
-                <a href="/" class="navbar-brand page-scroll">
+                <a href="/" class="navbar-brand page-scroll logo-services-img">
                     <span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span>
                 </a>
             </div>
@@ -118,7 +118,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">{% trans "Copyright &copy; VOI Services 2019" %}</span>
+                    <span class="copyright">{% trans "Copyright &copy; My Amazon Partner 2020" %}</span>
                 </div>
                 <div class="col-md-3"><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
@@ -128,7 +128,7 @@
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href='https://voiservices.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
+                            <a href='https://myamzpartner.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
                         </li>
                     </ul>
                 </div>
