--- a/html/templates/user_validation.html
+++ b/html/templates/user_validation.html
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">{% trans "Copyright &copy; VOI Services 2019" %}</span>
+                    <span class="copyright">{% trans "Copyright &copy; My Amazon Partner 2020" %}</span>
                 </div>
                 <div class="col-md-3"><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
@@ -110,7 +110,7 @@
                 <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
-                            <a href='https://voiservices.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
+                            <a href='https://myamzpartner.com/en/terms/' target="_blank" >{% trans "Termos e Condições de Uso" %}</a>
                         </li>
                     </ul>
                 </div>
