--- a/html/templates/includes/layout-footer.html
+++ b/html/templates/includes/layout-footer.html
@@ -74,7 +74,7 @@
                 </button>
 
                 {% block logo %}
-                    <a href="/" class="navbar-brand page-scroll">
+                    <a href="/" class="navbar-brand page-scroll logo-services-img">
                         <span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span>
                     </a>
                 {% endblock %}
@@ -196,7 +196,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">{% trans "Copyright &copy; VOI Services 2019" %}</span>
+                    <span class="copyright">{% trans "Copyright &copy; My Amazon Partner 2019" %}</span>
                 </div>
                 <div class="col-md-3">
 
