--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -79,20 +79,20 @@
                     <a href="javascript:void(0);" class="abre-tutorial open-endereco"><i class="fas fa-map-marker-alt"></i> {% trans "Nosso Endereço" %}</a>
                 </li>
                 <li>
-                    <a href="https://voiservices.com/en/tutorials" target="_blank" class="abre-tutorial"><i class="fa fa-book"></i> {% trans "Tutorials" %}</a>
-                </li>
+                    <a href="https://myamzpartner.com/en/tutorials" target="_blank" class="abre-tutorial"><i class="fa fa-book"></i> {% trans "Tutorials" %}</a>
+                </li><!--
                 <li class="seja-parceiro-menu {% block partner %}{% endblock %}">
                    <a href="{% url 'user_edit' %}">
                       <i class="fa fa-street-view"></i> {% trans "Assinar / cancelar plano" %}
                    </a>
-                </li>
+                </li>-->
                 <li class="{% block comoFunciona %}{% endblock %}">
                     <a href="https://voiservices.com" class="" target="_blank"><i class="fas fa-external-link-alt"></i> {% trans "Go to website" %}</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="javascript: void(0);" id="contato-popup-link"><i class="fas fa-question-circle"></i> <strong>{% trans "Support: " %}</strong> support@voiservices.com </a>
+                    <a href="javascript: void(0);" id="contato-popup-link"><i class="fas fa-question-circle"></i> <strong>{% trans "Support: " %}</strong> cs@myamzpartner.com </a>
                 </li>
 
                 {% if user.is_authenticated %}
@@ -116,7 +116,7 @@
                 </button>
 
                 {% block logo %}
-                    <a href="/" class="navbar-brand page-scroll">
+                    <a href="/" class="navbar-brand page-scroll logo-services-img">
                         <span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span>
                     </a>
                 {% endblock %}
@@ -129,7 +129,7 @@
                             <a href="javascript:void(0);" class="abre-tutorial open-endereco"><i class="fas fa-map-marker-alt"></i> {% trans "Nosso Endereço" %}</a>
                         </li>
                         <li>
-                            <a href="https://voiservices.com/en/tutorials" target="_blank" class="abre-tutorial"><i class="fa fa-book"></i> {% trans "Tutorials" %}</a>
+                            <a href="https://myamzpartner.com/en/tutorials" target="_blank" class="abre-tutorial"><i class="fa fa-book"></i> {% trans "Tutorials" %}</a>
                         </li>
                         <li>
                            <a href="{% url 'user_edit' %}">
@@ -142,7 +142,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="javascript: void(0);"><i class="fas fa-question-circle"></i> <strong>{% trans "Support: " %}</strong> support@voiservices.com </a>
+                            <a href="javascript: void(0);"><i class="fas fa-question-circle"></i> <strong>{% trans "Support: " %}</strong> cs@myamzpartner.com </a>
                         </li>
 
                         {% if user.is_authenticated %}
@@ -378,7 +378,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3"><br />
-                    <span class="copyright">{% trans "Copyright &copy; VOI Services 2019" %}</span>
+                    <span class="copyright">{% trans "Copyright &copy; My Amazon Partner 2020" %}</span>
                 </div>
                 <div class="col-md-3"><br /><!--
                     <a href="https://prepshiptool.com" target="_blank" class="by download">
@@ -452,7 +452,7 @@
                     <h4 class="modal-title">{% trans "Fale Conosco" %}</h4>
                 </div>
                 <div class="modal-body">
-                    <p>{% trans "Para entrar em contato com nosso suporte e nossos canais de atendimento, envie um email para <a class='download' href='mailto:support@voiservices.com'>support@voiservices.com</a>. Retornaremos o mais breve possível." %}</p>
+                    <p>{% trans "Para entrar em contato com nosso suporte e nossos canais de atendimento, envie um email para <a class='download' href='mailto:cs@myamzpartner.com'>cs@myamzpartner.com</a>. Retornaremos o mais breve possível." %}</p>
                     <p><strong>{% trans "Important: " %}</strong>{% trans "Our service desk is from Monday to Friday. All emails will be answered within 24 hours." %}</p>
                 </div>
                 <div class="modal-footer">
@@ -544,7 +544,7 @@
                     <p>{% trans "Com isso, criamos o 'Código do usuário'. No momento do seu cadastro, esse código é gerado e enviado para você por email. Você que utiliza nossos serviços de redirecionamento, storage e envia produtos para nós precisa inserir esse código ao lado do seu nome no remetente." %}</p>
                     <p>{% trans "Resumindo, nas suas compras, ao lado do seu nome, insira o seu código de usuário. Caso não seja inserido, nós não conseguiremos identificar seus produtos quando chegarem." %}</p>
                     <p><strong>{% trans "Caso a(s) caixa(s) não estejam identificadas com o código de usuário, será cobrada uma taxa de identificação de caixa" %}.</strong></p>
-                    <p>{% blocktrans %}Para maiores informações, <a href="https://voiservices.com/en/terms/" class="download">leia nossos termos</a>{% endblocktrans %}</p>
+                    <p>{% blocktrans %}Para maiores informações, <a href="https://myamzpartner.com/en/terms/" class="download">leia nossos termos</a>{% endblocktrans %}</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
@@ -566,7 +566,7 @@
                     <p>{% trans "Veja abaixo nosso endereço:" %}</p>
                     <p>{% trans "1 Lafayette Rd - Building 1, Door E (Loading Dock), Hampton, New Hampshire, 03842" %}</p>
                     <p><strong>{% trans "Não esqueça de colocar o seu código de cliente ao lado do seu nome no from." %}</strong></p>
-                    <p>{% blocktrans %}Para maiores informações, <a href='https://voiservices.com/en/terms/' class='download'>leia nossos termos</a>{% endblocktrans %}</p>
+                    <p>{% blocktrans %}Para maiores informações, <a href='https://myamzpartner.com/en/terms/' class='download'>leia nossos termos</a>{% endblocktrans %}</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
@@ -587,7 +587,7 @@
                 <div class="modal-body">
                     <p>{% trans "Olá" %}, {{ user.first_name }}</p>
                     <p>{% trans "Para que possamos realizar o seu envio, através do serviço 'We create your Amazon Shipment', precisamos que ANTES, realize a configuração em sua conta." %}</p>
-                    <p>{% blocktrans %}Veja como: <a class='download' href='https://voiservices.com/en/create-az-shipment/' target="_blank">https://voiservices.com/en/create-az-shipment/</a>{% endblocktrans %}</p>
+                    <p>{% blocktrans %}Veja como: <a class='download' href='https://myamzpartner.com/en/create-az-shipment/' target="_blank">https://myamzpartner.com/en/create-az-shipment/</a>{% endblocktrans %}</p>
                     <p><strong>{% blocktrans %}Não se esqueça que você precisa também já ter cadastrado os produtos do seu envio em seu estoque na Amazon.{% endblocktrans %}</strong></p>
                     <p><strong>{% trans "Assinantes VOI Prime podem utilizar este serviço sem nenhum custo adicional." %}</strong></p>
                     <div class="panel-group" id="accordion">
@@ -662,9 +662,9 @@
                     <h4 class="modal-title"><i class="fas fa-hand-paper" style="font-size: 30px;"></i> {% trans "Confirmação" %}</h4>
                 </div>
                 <div class="modal-body">
-                    <p class="fba-text">{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos no mesmo, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a VOI Services não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
+                    <p class="fba-text">{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos no mesmo, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a My Amazon Partner não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
                     <p class="fbm-text">{% trans "Este é um lote para envio MERCHANT. Os itens são destinados a vendedores Ebay, Ecommerce próprio e também para envio internacional." %}</p>
-                    <p class="fbm-text">{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a VOI Services não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
+                    <p class="fbm-text">{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a My Amazon Partner não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
                     <p class="shipment-text">{% trans "Você será direcionado(a) para pagamento no site da PayPal.  Confirma?" %}</p>
                 </div>
                 <div class="modal-footer">
