--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -53,7 +53,7 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <div id="login-box">
-            <a href="/" class="navbar-brand page-scroll">
+            <a href="/" class="navbar-brand page-scroll logo-services-img">
                 <span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span>
             </a>
             <p class="left">{% trans "Digite abaixo seus dados de acesso" %}</p>
@@ -85,7 +85,7 @@
                 <a class="btn-azul" href="{% url 'user_registration' %}"><i class="fa fa-paper-plane"></i> {% trans "Quero me Cadastrar" %}</a>
             </div>
         <div class="bottom-login">
-            <p>{% blocktrans %}Caso tenha alguma dúvida <a class="download" href="mailto:support@voiservices.com">clique aqui</a> e entre em contato conosco.{% endblocktrans %}</p>
+            <p>{% blocktrans %}Caso tenha alguma dúvida <a class="download" href="mailto:cs@myamzpartner.com">clique aqui</a> e entre em contato conosco.{% endblocktrans %}</p>
         </div>
 
         <form action="{% url 'my_set_language' %}" method="post">{% csrf_token %}
