--- a/html/templates/main.html
+++ b/html/templates/main.html
@@ -89,11 +89,11 @@
                 <img class="card-img-top" src="/static/img/imagem-cadastro.png" alt="Envios" style="height: 225px; width: 100%; display: block;" />
                   <div class="box-main"><strong class="titulo-box">{% trans "Suporte" %}</strong></div>
                 <div class="card-body">
-                  <p class="card-text"><strong>{% trans "Entre em contato conosco através do" %} <a href="mailto:support@voiservices.com" class="download">support@voiservices.com</a></strong></p>
+                  <p class="card-text"><strong>{% trans "Entre em contato conosco através do" %} <a href="mailto:cs@myamzpartner.com" class="download">cs@myamzpartner.com</a></strong></p>
 
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="mailto:support@voiservices.com" class="btn btn-default"><i class="fa fa-envelope"></i> {% trans "Enviar Email" %}</a>
+                      <a href="mailto:cs@myamzpartner.com" class="btn btn-default"><i class="fa fa-envelope"></i> {% trans "Enviar Email" %}</a>
                     </div>
                     <!-- <small class="text-muted">9 mins</small>-->
                   </div>
