--- a/html/templates/privacy_policy.html
+++ b/html/templates/privacy_policy.html
@@ -11,15 +11,15 @@
                 <div class="col-md-10">
                     <h1 class="page-header"><i class="fa fa-file-text"></i> Políticas de Privacidade</h1>
                     <div>
-                        <p>O VOI Lots está comprometido com a conscientização de seus clientes em relação às suas informações coletadas e utilizadas para proporcionar uma melhor experiência de navegação. Por isso, apresentamos nossa política de privacidade, que tem por objetivo esclarecer o uso dessas informações. Ao visitar o www.lots.voiservices.com, você aceita as práticas descritas nesta política de privacidade.</p>
+                        <p>O My Lots está comprometido com a conscientização de seus clientes em relação às suas informações coletadas e utilizadas para proporcionar uma melhor experiência de navegação. Por isso, apresentamos nossa política de privacidade, que tem por objetivo esclarecer o uso dessas informações. Ao visitar o www.lots.voiservices.com, você aceita as práticas descritas nesta política de privacidade.</p>
 
-                        <p>O VOI Lots tem o compromisso com a privacidade e a segurança de seus clientes durante todo o processo de navegação e compra pelo site. Os dados cadastrais dos clientes não são vendidos, trocados ou divulgados para terceiros, exceto quando essas informações são necessárias para o processo de entrega, para cobrança ou para participação em promoções solicitadas pelos clientes. Seus dados pessoais serão fundamentais para que seu pedido chegue em segurança na Amazon, de acordo com nosso prazo de entrega.</p>
+                        <p>O My Lots tem o compromisso com a privacidade e a segurança de seus clientes durante todo o processo de navegação e compra pelo site. Os dados cadastrais dos clientes não são vendidos, trocados ou divulgados para terceiros, exceto quando essas informações são necessárias para o processo de entrega, para cobrança ou para participação em promoções solicitadas pelos clientes. Seus dados pessoais serão fundamentais para que seu pedido chegue em segurança na Amazon, de acordo com nosso prazo de entrega.</p>
 
-                        <p>O VOI Lots utiliza cookies e informações de sua navegação (sessão do browser) com o objetivo de traçar um perfil do público que visita o site e aperfeiçoar sempre nossos serviço, produtos, conteúdos e garantir as melhores ofertas e promoções para você. Durante todo este processo manteremos suas informações em sigilo absoluto. Vale lembrar que seus dados são registrados pelo VOI Lots de forma automatizada, dispensando manipulação humana.</p>
+                        <p>O My Lots utiliza cookies e informações de sua navegação (sessão do browser) com o objetivo de traçar um perfil do público que visita o site e aperfeiçoar sempre nossos serviço, produtos, conteúdos e garantir as melhores ofertas e promoções para você. Durante todo este processo manteremos suas informações em sigilo absoluto. Vale lembrar que seus dados são registrados pelo My Lots de forma automatizada, dispensando manipulação humana.</p>
 
                         <p>Para que estes dados permaneção intactos, não aconselhamos expressamente a divulgação de sua senha a terceiros, mesmo a amigos e parentes.</p>
 
-                        <p>O VOI Lots não se responsabiliza pela entrega de todos os e-mails disparados, tendo em vista que alguns servidores bloqueiam determinadas mensagens.</p>
+                        <p>O My Lots não se responsabiliza pela entrega de todos os e-mails disparados, tendo em vista que alguns servidores bloqueiam determinadas mensagens.</p>
                         <br />
                         <strong>Data de atualiza&ccedil;&atilde;o: </strong>10 Agosto de 2018</p>
 
